running watchPosition in navigator.geolocation

--- a/index-START.html
+++ b/index-START.html
@@ -59,6 +59,12 @@
     /*Compass: https://thenounproject.com/search/?q=compass&i=592352*/
   </style>
   <script>
+    const arrow = document.querySelector('.arrow');
+    const speed = document.querySelector('.speed-value');
+
+    navigator.geolocation.watchPosition(); //there is also getCurrentPosition(), but that gives you a single response, where watchPosition continuosly refreshes
+
+
   </script>
 </body>
 </html>
